# Homework-libraries-Nechibylo

./: .gitignore
Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Task1/GreetingLib/: Greeter.cpp  Greeter.h  GreetingLib.vcxproj
Task1/GreetingLib/x64/Debug/GreetingLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GreetingLib.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Task2/LeavingDLL/: LeavingDLL.vcxproj  leaver.cpp  leaver.h
Task2/LeavingDLL/x64/Debug/: LeavingDLL.dll.recipe  LeavingDLL.ilk  vc143.idb
Task2/LeavingDLL/x64/Debug/LeavingDLL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LeavingDLL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Task3/: CMakeLists.txt  CMakePresets.json  Task3.cpp  Task3.h
Task3/leaving/: leaver.cpp  leaver.h
Task4/: CMakeLists.txt  Task4.cpp  Task4.h
Task4/figures/: Figure.cpp  Figure.h  figures.h
Task4/figures/functions/: PrintInfo.cpp  PrintInfo.h
Task4/figures/quadrangles/: Parallelogram.cpp  Quadrangle.cpp  Quadrangle.h  Quadrate.cpp  Rectangle.cpp  Rhombus.cpp
Task4/figures/triangles/: IsoscelesTriangle.cpp  PerfectTriangle.cpp  RectangularTriangle.cpp  Triangle.cpp  Triangle.h
Task5/: Task5.cpp  Task5.sln  Task5.vcxproj
Task5/figures/: Figure.h  figures.h  figures.vcxproj  figures.vcxproj.filters
Task5/figures/functions/: PrintInfo.h
Task5/figures/quadrangles/: Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Quadrate.h  Rectangle.h  Rhombus.h
Task5/figures/triangles/: IsoscelesTriangle.cpp  IsoscelesTriangle.h  PerfectTriangle.h  RectangularTriangle.h  Triangle.h
Task5/figures/x64/Debug/: figures.dll.recipe  figures.ilk  vc143.idb
Task5/figures/x64/Debug/figures.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  figures.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
